# OpenCvFaceDetectDemo

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jansir/opencvdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FaceDetector.cpp  native-lib.cpp
app/src/main/java/com/jansir/opencvdemo/: FaceDetector.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jansir/opencvdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
